--- a/ai-service/requirements.txt
+++ b/ai-service/requirements.txt
@@ -5,11 +5,8 @@ python-multipart==0.0.17
 pydantic==2.10.3
 pydantic-settings==2.6.1
 
-# OpenAI and AI libraries
-openai==1.57.4
-langchain==0.3.13
-langchain-openai==0.2.13
-langchain-community==0.3.13
+# Anthropic Claude API
+anthropic==0.39.0
 
 # Speech recognition and TTS
 faster-whisper==1.1.0
@@ -26,7 +23,7 @@ textblob==0.18.0.post0
 
 
 # HTTP client
-httpx==0.28.1
+httpx>=0.27.0,<0.28.0
 requests==2.32.3
 
 # Database (if needed)
